<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Acceleration and Sub control for it -->


    <TextView
        android:id="@+id/tv_acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/acceleration"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_acc_x_label"
        android:layout_width="10dp"
        android:layout_height="22dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="4dp"
        android:text="@string/x"
        app:layout_constraintBottom_toTopOf="@+id/tv_acc_x_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_acc_y_label"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/y"
        app:layout_constraintBottom_toTopOf="@+id/tv_acc_y_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_acc_z_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/z"
        app:layout_constraintBottom_toTopOf="@+id/tv_acc_z_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Controls where the accerleraction I must update -->
    <TextView
        android:id="@+id/tv_acc_x_value"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_acc_y_value"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_acc_z_value"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- End of the Acceleration properites and controls -->


    <TextView
        android:id="@+id/tv_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="ORIENTATION"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acc_y_value" />

    <TextView
        android:id="@+id/tv_ori_z_value"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acc_y_value" />

    <TextView
        android:id="@+id/tv_ori_x_value"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acc_x_value" />

    <TextView
        android:id="@+id/tv_ori_x_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="θx"
        app:layout_constraintBottom_toTopOf="@+id/tv_ori_x_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_ori_y_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="θy"
        app:layout_constraintBottom_toTopOf="@+id/tv_ori_y_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_ori_z_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="θz"
        app:layout_constraintBottom_toTopOf="@+id/tv_ori_z_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_ori_y_value"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acc_z_value" />


    <!-- End of Orientation Measurements and pPROPERTIES  -->


    <!--  Gyscope for angular acceleration and all-->
    <TextView
        android:id="@+id/tv_gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="GYROSCOPE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_z_value" />

    <TextView
        android:id="@+id/tv_ori_x_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="θx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_x_value" />

    <TextView
        android:id="@+id/tv_ori_y_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="θy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_z_value" />

    <TextView
        android:id="@+id/tv_ori_z_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="θz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_y_value" />


    <TextView
        android:id="@+id/tv_ori_x_value2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_x_value" />

    <TextView
        android:id="@+id/tv_ori_y_value2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gyroscope" />

    <TextView
        android:id="@+id/tv_ori_z_value2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toEndOf="@+id/tv_ori_y_value2"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_y_value" />


    <!-- Global Position System -->
    <TextView
        android:id="@+id/tv_gyroscope2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/global_positioning_system"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_y_value2" />

    <TextView
        android:id="@+id/tv_ori_x_label4"

        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="Longitude"
        app:layout_constraintEnd_toStartOf="@+id/tv_ori_z_value5"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gyroscope2" />

    <TextView
        android:id="@+id/tv_ori_z_value5"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="00:00:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gyroscope2" />

    <TextView
        android:id="@+id/tv_ori_x_label5"

        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:text="@string/latitude"
        app:layout_constraintEnd_toStartOf="@+id/tv_ori_z_value3"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_x_label4" />

    <TextView
        android:id="@+id/tv_ori_z_value3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/_00_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_z_value5" />

    <TextView
        android:id="@+id/tv_ori_x_label6"

        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="28dp"
        android:text="@string/speed"
        app:layout_constraintEnd_toStartOf="@+id/tv_ori_x_value3"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_x_label5" />

    <TextView
        android:id="@+id/tv_ori_x_value3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/_0_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ori_z_value3" />

    <!-- End of GPS CONTROLS AND Properties-->

    <!--Button Content -->
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/blue"
        android:padding="8dp"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gyroscope2" />

  <!--End of all the controls and properties of the UI -->

</androidx.constraintlayout.widget.ConstraintLayout>